fix pdf spacing

--- a/src/app/styles/print.css
+++ b/src/app/styles/print.css
@@ -4,7 +4,9 @@
     display: none !important;
   }
   .resume-scale {
-    transform: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    transform: translateX(-8px);
     width: 794px !important;
   }
 
